[package]
name = "nightfall_alloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
lazy_static = "1.5.0"
rand = "0.9.0"
thiserror = "2.0.11"
thread_local = "1.1.8"

[features]
atom = []
sync = []
