[package]
name = "nightfall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.15.3"
nightfall_allocators ={ path = "nightfall_allocators" }
nightfall_collections ={ path = "nightfall_collections" }

[features]
atom = []
sync = []
